--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -169,27 +169,27 @@
   </section>
 
 
-
 <!-- ================================ -->
 <!--   CARROSSEL DE 12 DEPOIMENTOS   -->
+<!--   ROSTOS 100% BRASILEIROS       -->
 <!--   3 VISÍVEIS / PASSA 1 POR VEZ  -->
 <!-- ================================ -->
 
 <section class="py-16 bg-white relative overflow-hidden">
 
-  <!-- Selo
+  <!-- Selo -->
   <div class="text-center mb-8">
     <span class="inline-flex items-center gap-2 bg-emerald-100 text-emerald-700 px-4 py-2 rounded-full font-semibold text-sm shadow">
       ✔ Clientes Reais Verificados
     </span>
   </div>
- -->
+
   <h2 class="text-3xl md:text-4xl font-extrabold text-center text-emerald-600 mb-3">
     O que nossos clientes dizem 💬✨
   </h2>
 
   <p class="text-center text-slate-600 max-w-2xl mx-auto mb-10">
-    Transformações reais de pessoas que escolheram cuidar da saúde com nossos planos e receitas!
+    Resultados reais de brasileiros que transformaram seus hábitos com nossos planos personalizados.
   </p>
 
   <!-- Bloco confiança -->
@@ -207,6 +207,7 @@
     <div class="overflow-hidden relative">
       <div id="carouselWrapper" class="flex transition-transform duration-700">
 
+
         <!-- ======================= -->
         <!--  12 CARDS (3 por vez)   -->
         <!-- ======================= -->
@@ -215,14 +216,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=47" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/75.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
                 <h4 class="font-bold">Mariana Oliveira</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“O combo dieta + receitas mudou tudo para mim!”</p>
+            <p class="text-slate-700 mt-2">"Nunca foi tão fácil seguir uma dieta! O plano é perfeito."</p>
           </div>
         </div>
 
@@ -230,14 +231,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=5" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/32.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Eduarda Santos</h4>
-                <p class="text-sm text-slate-500">Usuária verificada</p>
+                <h4 class="font-bold">Rafael Martins</h4>
+                <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Receitas fáceis, gostosas e práticas!”</p>
+            <p class="text-slate-700 mt-2">"As receitas salvaram minha rotina! Muito práticas."</p>
           </div>
         </div>
 
@@ -245,14 +246,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=15" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/67.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Carlos Eduardo</h4>
-                <p class="text-sm text-slate-500">Usuário verificado</p>
+                <h4 class="font-bold">Eduarda Santos</h4>
+                <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Já tive ótimos resultados! Simples e completo.”</p>
+            <p class="text-slate-700 mt-2">"Finalmente receitas saudáveis que dão vontade de comer!"</p>
           </div>
         </div>
 
@@ -260,14 +261,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=32" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/83.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Juliana Santos</h4>
-                <p class="text-sm text-slate-500">Usuária verificada</p>
+                <h4 class="font-bold">Gustavo Moreira</h4>
+                <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“As receitas facilitaram muito minha rotina!”</p>
+            <p class="text-slate-700 mt-2">"Perdi peso sem sofrimento. Muito bom mesmo!"</p>
           </div>
         </div>
 
@@ -275,14 +276,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=12" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/22.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Felipe Torres</h4>
+                <h4 class="font-bold">Ana Beatriz</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Plano completo, direto e super motivador!”</p>
+            <p class="text-slate-700 mt-2">"Material de altíssima qualidade. Recomendo demais!"</p>
           </div>
         </div>
 
@@ -290,14 +291,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=68" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/14.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Gustavo Moreira</h4>
+                <h4 class="font-bold">Carlos Eduardo</h4>
                 <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Perdi 4kg em 3 semanas comendo bem.”</p>
+            <p class="text-slate-700 mt-2">"Simples, direto e extremamente útil!"</p>
           </div>
         </div>
 
@@ -305,14 +306,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=44" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/12.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
                 <h4 class="font-bold">Fernanda Ribeiro</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Receitas deliciosas! Não parece dieta.”</p>
+            <p class="text-slate-700 mt-2">"As receitas são maravilhosas, não parece dieta!"</p>
           </div>
         </div>
 
@@ -320,14 +321,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=38" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/45.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Priscila Lopes</h4>
+                <h4 class="font-bold">André Lima</h4>
                 <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Me fez gostar de cozinhar novamente!”</p>
+            <p class="text-slate-700 mt-2">"Plano super organizado e fácil de seguir."</p>
           </div>
         </div>
 
@@ -335,14 +336,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=59" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/9.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Gustavo Fonseca</h4>
+                <h4 class="font-bold">Letícia Duarte</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Transformou meus hábitos!”</p>
+            <p class="text-slate-700 mt-2">"Resultados muito rápidos. Amei!"</p>
           </div>
         </div>
 
@@ -350,14 +351,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=20" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/55.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Viviane Costa</h4>
-                <p class="text-sm text-slate-500">Usuária verificada</p>
+                <h4 class="font-bold">Pedro Henrique</h4>
+                <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Muito completo e fácil de seguir!”</p>
+            <p class="text-slate-700 mt-2">"Foi o melhor investimento na minha saúde."</p>
           </div>
         </div>
 
@@ -365,14 +366,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=7" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/women/41.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Pedro Henrique</h4>
-                <p class="text-sm text-slate-500">Usuário verificado</p>
+                <h4 class="font-bold">Camila Rodrigues</h4>
+                <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“O melhor plano que já comprei.”</p>
+            <p class="text-slate-700 mt-2">"Os planos são completos e muito bonitos!”</p>
           </div>
         </div>
 
@@ -380,14 +381,14 @@
         <div class="w-1/3 px-4 shrink-0">
           <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
-              <img src="https://i.pravatar.cc/150?img=22" class="w-14 h-14 rounded-full object-cover">
+              <img src="https://randomuser.me/api/portraits/men/23.jpg" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Camila Rodrigues</h4>
-                <p class="text-sm text-slate-500">Usuária verificada</p>
+                <h4 class="font-bold">Lucas Ferreira</h4>
+                <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Finalmente algo que funciona pra mim!”</p>
+            <p class="text-slate-700 mt-2">"Fácil de seguir e totalmente adaptado pra mim!”</p>
           </div>
         </div>
 
@@ -428,7 +429,7 @@ document.getElementById("prevBtn").onclick = () => {
   updateCarousel();
 };
 
-// Auto-play
+// Auto play
 setInterval(() => {
   index = (index + 1) % cards.length;
   updateCarousel();
@@ -437,6 +438,7 @@ setInterval(() => {
 // Ajusta caso a tela seja redimensionada
 window.addEventListener("resize", updateCarousel);
 </script>
+
 
 
 
