--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -101,7 +101,8 @@
     </div>
   </section>
 
-  <!-- Oferta -->
+  <!-- Oferta  ORIGINAL
+  
   <section id="oferta" class="py-10">
     <div class="container mx-auto px-4">
       <div class="grid lg:grid-cols-3 gap-6 items-start">
@@ -128,6 +129,56 @@
             <button id="btnResultados">📸 Veja os resultados de nossos pacientes</button>
           </div>
         </div>
+
+  -->
+
+
+<!-- Oferta -->
+<section id="oferta" class="py-10">
+  <div class="container mx-auto px-4">
+    <div class="grid lg:grid-cols-3 gap-6 items-start">
+      <div class="lg:col-span-2 p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
+
+        <div class="flex items-center gap-2 text-sm text-slate-500">
+          <span class="badge bg-emerald-100 text-emerald-800">Personalizado</span> Plano baseado no seu biotipo e IMC
+        </div>
+
+        <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
+
+        <!-- ⭐ Selo Garantia 7 Dias -->
+        <div class="mt-3 flex items-center gap-3">
+          <img src="https://i.imgur.com/0HcMfZp.png" alt="Garantia 7 dias" class="w-20 h-20 select-none">
+          <p class="text-slate-600 text-sm leading-tight">
+            Compra segura: você tem <strong class="text-emerald-600">7 dias de garantia incondicional</strong>.
+          </p>
+        </div>
+        <!-- Fim do selo -->
+
+        <ul class="mt-4 space-y-3 text-slate-700">
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções para cada uma das 5 refeições diarias, café da manhã, almoço, lanche, janta e ceia! ajustadas ao seu perfil.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Livro digital com 200+ receitas</strong> — fáceis, econômicas e saborosas.<strong>(OPCIONAL)</strong></span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Suplementação recomendada</strong> — alinhada ao seu objetivo e biotipo.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Estratégias complementares</strong> — hábitos e ajustes que aceleram o resultado.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Explicação do seu metabolismo e tipo de corpo</strong> — entenda como usar isso ao seu favor.</span></li>
+        </ul>
+
+        <div class="mt-6 p-4 rounded-xl bg-emerald-50 border border-emerald-200 text-emerald-900">
+          <p id="resumoPlano" class="font-semibold">Seu plano está com: <span id="planoSpan">Liberação Imediata</span>.</p>
+          <p id="descSpan" class="mt-1 text-slate-800"></p>
+        </div>
+
+        <div class="text-center mt-6">
+          <button id="btnResultados">📸 Veja os resultados de nossos pacientes</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+  
+
+  
 
         <!-- BOX DE PAGAMENTO -->
         <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center relative">
