--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -145,9 +145,16 @@
 
         <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
 
-        <!-- ⭐ Selo Garantia 7 Dias -->
+        <!-- ⭐ Selo Garantia 7 Dias (SVG inline — funciona sempre) -->
         <div class="mt-3 flex items-center gap-3">
-          <img src="https://i.imgur.com/0HcMfZp.png" alt="Garantia 7 dias" class="w-20 h-20 select-none">
+          <svg width="80" height="80" viewBox="0 0 100 100">
+            <circle cx="50" cy="50" r="48" fill="#FDE68A" stroke="#CA8A04" stroke-width="4"/>
+            <circle cx="50" cy="50" r="40" fill="#FEF3C7" stroke="#D97706" stroke-width="3"/>
+            <text x="50" y="38" font-size="14" text-anchor="middle" fill="#92400E" font-weight="bold">GARANTIA</text>
+            <text x="50" y="58" font-size="32" text-anchor="middle" fill="#B45309" font-weight="900">7</text>
+            <text x="50" y="75" font-size="14" text-anchor="middle" fill="#92400E" font-weight="bold">DIAS</text>
+          </svg>
+
           <p class="text-slate-600 text-sm leading-tight">
             Compra segura: você tem <strong class="text-emerald-600">7 dias de garantia incondicional</strong>.
           </p>
@@ -175,6 +182,7 @@
     </div>
   </div>
 </section>
+
 
   
 
