--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -146,7 +146,7 @@
         <!-- BOX DE PAGAMENTO -->
         <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center relative">
           <div id="countdownBox" class="mx-auto">⏰ <span>Oferta expira em:</span> <span id="countdown">05:00</span></div>
-          <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3>
+      <!--    <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3> -->
           <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
             <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
             De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
