--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -124,7 +124,7 @@
           </ul>
 
          <div class="mt-6 p-4 rounded-xl bg-emerald-50 border border-emerald-200 text-emerald-900">
-            <p id="resumoPlano" class="font-semibold">Seu plano está com: <span id="planoSpan">Liberação Imediata e RISCO ZERO (7 dias de garantia)</span>.      
+            <p id="resumoPlano" class="font-semibold">⭐ Seu plano está com: <span id="planoSpan">Liberação Imediata e 🛡️ RISCO ZERO (7 dias de garantia)</span>.      
                  
             </p>
             <p id="descSpan" class="mt-1 text-slate-800"></p>
