--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -149,7 +149,7 @@
       <!--    <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3> -->
           <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
             <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
-            De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
+            De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">✨ R$ 19,90</span>
           </h4>
           <p class="mt-3 text-slate-700 text-sm leading-relaxed">
             Você deve estar se perguntando.. porque tudo isso por somente R$ 19,90? ... verdade o valor está extremamente baixo, porem tem um motivo pra isso... <strong>somente uma vez no ano</strong> nós liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
