--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -111,7 +111,7 @@
           <div class="flex items-center gap-2 text-sm text-slate-500">
             <span class="badge bg-emerald-100 text-emerald-800">Personalizado</span> Plano baseado no seu biotipo e IMC
           </div>
-          <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
+          <h2 class="mt-2 text-2xl font-extrabold">✨ Tudo pronto! O que já está disponível para você</h2>
 
           <ul class="mt-4 space-y-3 text-slate-700">
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>DIETA semanal COMPLETA!</strong> — 3 opções para cada uma das 5 refeições diarias, café da manhã, almoço, lanche, janta e ceia! ajustadas ao seu perfil.</span></li>
@@ -149,7 +149,7 @@
       <!--    <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3> -->
           <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
             <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
-            De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">✨ R$ 19,90</span>
+            De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
           </h4>
           <p class="mt-3 text-slate-700 text-sm leading-relaxed">
             Você deve estar se perguntando.. porque tudo isso por somente R$ 19,90? ... verdade o valor está extremamente baixo, porem tem um motivo pra isso... <strong>somente uma vez no ano</strong> nós liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
