--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -190,6 +190,80 @@
   </section>
 
 
+
+
+
+
+<!-- Prova Social - Prints WhatsApp -->
+<section class="py-12 bg-white">
+  <div class="container mx-auto px-4 text-center">
+
+    <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">
+      Prova Social Real 📱💬
+    </h2>
+    <p class="text-slate-600 max-w-2xl mx-auto mb-10">
+      Veja o que nossos clientes estão dizendo após receberem o plano personalizado e colocarem em prática:
+    </p>
+
+    <div class="grid md:grid-cols-3 gap-6">
+
+      <!-- PRINT 1 -->
+      <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
+        <img src="https://cdn.pixabay.com/photo/2020/05/26/08/34/chat-5226541_960_720.png"
+             alt="Print WhatsApp 1"
+             class="w-full h-64 object-cover">
+        <div class="p-4 text-left">
+          <p class="text-slate-700 text-sm italic">
+            “Gente, estou chocada! Em 7 dias já desinchei demais!! Obrigada pelo plano, ficou perfeito pra minha rotina!”
+          </p>
+          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificada</p>
+        </div>
+      </div>
+
+      <!-- PRINT 2 -->
+      <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
+        <img src="https://cdn.pixabay.com/photo/2020/05/26/08/34/chat-5226541_960_720.png"
+             alt="Print WhatsApp 2"
+             class="w-full h-64 object-cover">
+        <div class="p-4 text-left">
+          <p class="text-slate-700 text-sm italic">
+            “Adorei as opções do cardápio! Muito melhor do que qualquer dieta pronta que já comprei.”
+          </p>
+          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificada</p>
+        </div>
+      </div>
+
+      <!-- PRINT 3 -->
+      <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
+        <img src="https://cdn.pixabay.com/photo/2020/05/26/08/34/chat-5226541_960_720.png"
+             alt="Print WhatsApp 3"
+             class="w-full h-64 object-cover">
+        <div class="p-4 text-left">
+          <p class="text-slate-700 text-sm italic">
+            “Seguindo certinho como veio no plano! Já perdi 3,2kg em 12 dias 😍”
+          </p>
+          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificado</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
 <!-- ================================ -->
 <!--   CARROSSEL DE 12 DEPOIMENTOS   -->
 <!--   ROSTOS 100% BRASILEIROS       -->
