--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -209,7 +209,7 @@
 
       <!-- PRINT 1 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://dietapronta.online/uploads/what-01.png" 
+        <img src="https://dietapronta.online/upload/what-01.png" 
      class="w-full h-64 object-cover rounded-lg shadow-lg">
 
         <div class="p-4 text-left">
