--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -222,20 +222,20 @@
 
       <!-- PRINT 2 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://cdn.pixabay.com/photo/2020/05/26/08/34/chat-5226541_960_720.png"
+        <img src="https://dietapronta.online/upload/what-02.png"
              alt="Print WhatsApp 2"
              class="w-full h-64 object-cover">
         <div class="p-4 text-left">
           <p class="text-slate-700 text-sm italic">
-            “Adorei as opções do cardápio! Muito melhor do que qualquer dieta pronta que já comprei.”
+            “Gostei das opções do cardápio! Muito melhor do que qualquer dieta pronta que já comprei.”
           </p>
-          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificada</p>
+          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificado</p>
         </div>
       </div>
 
       <!-- PRINT 3 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://cdn.pixabay.com/photo/2020/05/26/08/34/chat-5226541_960_720.png"
+        <img src="https://dietapronta.online/upload/what-03.png"
              alt="Print WhatsApp 3"
              class="w-full h-64 object-cover">
         <div class="p-4 text-left">
