--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -209,8 +209,12 @@
 
       <!-- PRINT 1 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://dietapronta.online/upload/what-01.png" 
-     class="w-full h-64 object-cover rounded-lg shadow-lg">
+        
+        <!-- Mantém proporção 363x675 -->
+        <div class="w-full" style="aspect-ratio: 363 / 675;">
+          <img src="https://dietapronta.online/upload/what-01.png"
+               class="w-full h-full object-contain rounded-lg shadow-lg">
+        </div>
 
         <div class="p-4 text-left">
           <p class="text-slate-700 text-sm italic">
@@ -222,9 +226,12 @@
 
       <!-- PRINT 2 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://dietapronta.online/upload/what-02.png"
-             alt="Print WhatsApp 2"
-             class="w-full h-64 object-cover">
+
+        <div class="w-full" style="aspect-ratio: 363 / 675;">
+          <img src="https://dietapronta.online/upload/what-02.png"
+               class="w-full h-full object-contain rounded-lg shadow-lg">
+        </div>
+
         <div class="p-4 text-left">
           <p class="text-slate-700 text-sm italic">
             “Gostei das opções do cardápio! Muito melhor do que qualquer dieta pronta que já comprei.”
@@ -235,9 +242,12 @@
 
       <!-- PRINT 3 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
-        <img src="https://dietapronta.online/upload/what-03.png"
-             alt="Print WhatsApp 3"
-             class="w-full h-64 object-cover">
+
+        <div class="w-full" style="aspect-ratio: 363 / 675;">
+          <img src="https://dietapronta.online/upload/what-03.png"
+               class="w-full h-full object-contain rounded-lg shadow-lg">
+        </div>
+
         <div class="p-4 text-left">
           <p class="text-slate-700 text-sm italic">
             “Seguindo certinho como veio no plano! Já perdi 3,2kg em 12 dias 😍”
@@ -250,6 +260,7 @@
 
   </div>
 </section>
+
 
 
 
