--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -205,7 +205,7 @@
       Veja o que nossos clientes estão dizendo após receberem o plano personalizado e colocarem em prática:
     </p>
 
-    <div class="grid md:grid-cols-3 gap-6">
+    <div class="grid md:grid-cols-4 gap-6">
 
       <!-- PRINT 1 -->
       <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
@@ -255,6 +255,23 @@
           <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificado</p>
         </div>
       </div>
+
+
+      <div class="rounded-2xl border border-slate-200 shadow-soft overflow-hidden bg-slate-50">
+
+        <div class="w-full" style="aspect-ratio: 363 / 675;">
+          <img src="https://dietapronta.online/upload/what-03.png"
+               class="w-full h-full object-contain rounded-lg shadow-lg">
+        </div>
+
+        <div class="p-4 text-left">
+          <p class="text-slate-700 text-sm italic">
+            “Seguindo certinho como veio no plano! Já perdi 3,2kg em 12 dias 😍”
+          </p>
+          <p class="mt-2 text-emerald-600 font-semibold">— Cliente verificado</p>
+        </div>
+      </div>
+      
 
     </div>
 
