--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -199,7 +199,7 @@
   <div class="container mx-auto px-4 text-center">
 
     <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">
-      Prova Social Real 📱💬
+      Prova Social dos Pacientes 📱💬
     </h2>
     <p class="text-slate-600 max-w-2xl mx-auto mb-10">
       Veja o que nossos clientes estão dizendo após receberem o plano personalizado e colocarem em prática:
