--- a/approved-upsell/index.html
+++ b/approved-upsell/index.html
@@ -32,6 +32,19 @@
       100% { opacity: 0.7; box-shadow: 0 0 20px rgba(16,185,129,0.8); }
     }
   </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17661147688');
+</script>
+
+  
 </head>
 <body class="bg-slate-50 text-slate-900">
 
