--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 
-  <!-- Google tag (gtag.js) --> 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688"></script> 
-  <script> window.dataLayer = window.dataLayer || []; 
-    function gtag(){dataLayer.push(arguments);} 
-    gtag('js', new Date()); gtag('config', 'AW-17661147688');
-  </script>
-
   <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8bd1b71a-ff84-437d-a53b-3af6d91d14a8"> </script>
 <!-- End of  Zendesk Widget script -->
@@ -63,6 +56,21 @@
     /* Indicador de IMC */
     .imc-chip { display:inline-block; padding:4px 10px; border-radius:999px; font-size:.85rem; font-weight:700; }
   </style>
+
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17661147688');
+</script>
+
+  
 </head>
 <body class="bg-slate-50 text-slate-900">
   <!-- Header -->
