--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -16,6 +16,20 @@
     .container{max-width:980px;}
     .shadow-soft{box-shadow:0 10px 25px rgba(2,6,23,.08);}
   </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17661147688');
+</script>
+
+
+  
 </head>
 <body class="bg-slate-50 text-slate-900">
 
