--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -53,6 +53,20 @@
       box-shadow:0 10px 25px rgba(0,0,0,.25);
     }
   </style>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17661147688');
+</script>
+
+  
 </head>
 <body class="bg-slate-50 text-slate-900">
 
