--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -55,6 +55,12 @@
   </style>
 
 
+
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8bd1b71a-ff84-437d-a53b-3af6d91d14a8"> </script>
+<!-- End of  Zendesk Widget script -->
+
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
 </script>
@@ -65,6 +71,7 @@
 
   gtag('config', 'AW-17661147688');
 </script>
+  
 
   
 </head>
