--- a/approved-upsell/index.html
+++ b/approved-upsell/index.html
@@ -40,16 +40,16 @@
 
   
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688">
-</script>
+<!-- Event snippet for Compra conversion page -->
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-17661147688');
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17661147688/q7jPCMKArLQbEKj0vuVB',
+      'value': 1.0,
+      'currency': 'BRL',
+      'transaction_id': ''
+  });
 </script>
+
 
   
 </head>
