--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
   gtag('config', 'AW-17661147688');
 </script>
 
+
+
+  <script>
+const userId = "user_" + Math.random().toString(36).substring(2);
+
+// REGISTRAR ENTRADA
+fetch("https://italomelo.com/contador.php?action=enter&id=" + userId);
+
+// REGISTRAR SAÍDA
+window.addEventListener("beforeunload", () => {
+    navigator.sendBeacon("https://italomelo.com/contador.php?action=exit&id=" + userId);
+});
+</script>
+
+
   
 </head>
 <body class="bg-slate-50 text-slate-900">
