--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@ window.addEventListener("beforeunload", () => {
 </script>
 
 
+  <script>
+const userId = "user_" + Math.random().toString(36).substring(2);
+
+// REGISTRAR ENTRADA
+fetch("https://italomelo.com/contador.php?action=enter&id=" + userId);
+
+// REGISTRAR SAÍDA
+window.addEventListener("beforeunload", () => {
+    navigator.sendBeacon("https://italomelo.com/contador.php?action=exit&id=" + userId);
+});
+</script>
+
+
+
   
 </head>
 <body class="bg-slate-50 text-slate-900">
