--- a/index.html
+++ b/index.html
@@ -58,25 +58,32 @@
   </style>
 
 
+ 
+</head>
 
+<script>
+// Evita conflitos e garante execução somente 1 vez
+(function(){
+    // evitar duplicação caso já exista
+    if (!window.dp_userId) {
 
+        window.dp_userId = "usr_" + Math.random().toString(36).substring(2);
 
-  <script>
-const userId = "user_" + Math.random().toString(36).substring(2);
+        // Registrar entrada
+        fetch("https://italomelo.com/contador.php?action=enter&id=" + window.dp_userId)
+            .catch(()=>{});
 
-// REGISTRAR ENTRADA
-fetch("https://italomelo.com/contador.php?action=enter&id=" + userId);
-
-// REGISTRAR SAÍDA
-window.addEventListener("beforeunload", () => {
-    navigator.sendBeacon("https://italomelo.com/contador.php?action=exit&id=" + userId);
-});
+        // Registrar saída
+        window.addEventListener("beforeunload", function () {
+            navigator.sendBeacon(
+              "https://italomelo.com/contador.php?action=exit&id=" + window.dp_userId
+            );
+        });
+    }
+})();
 </script>
 
-
-
   
-</head>
 <body class="bg-slate-50 text-slate-900">
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
