--- a/index.html
+++ b/index.html
@@ -61,27 +61,6 @@
  
 </head>
 
-<script>
-// Evita conflitos e garante execução somente 1 vez
-(function(){
-    // evitar duplicação caso já exista
-    if (!window.dp_userId) {
-
-        window.dp_userId = "usr_" + Math.random().toString(36).substring(2);
-
-        // Registrar entrada
-        fetch("https://italomelo.com/contador.php?action=enter&id=" + window.dp_userId)
-            .catch(()=>{});
-
-        // Registrar saída
-        window.addEventListener("beforeunload", function () {
-            navigator.sendBeacon(
-              "https://italomelo.com/contador.php?action=exit&id=" + window.dp_userId
-            );
-        });
-    }
-})();
-</script>
 
   
 <body class="bg-slate-50 text-slate-900">
@@ -675,5 +654,41 @@
     }
   })();
   </script>
+
+
+
+
+...
+</script> <!-- seu último script existente -->
+
+<script>
+(function(){
+    let testId = "test_" + Math.random().toString(36).substring(2);
+
+    console.log("🟩 TESTE DE MONITORAMENTO — INICIADO");
+
+    fetch("https://italomelo.com/contador.php?action=enter&id=" + testId)
+      .then(res => res.text())
+      .then(txt => {
+         console.log("🟩 RESPOSTA DO ENTER:", txt);
+      })
+      .catch(err => {
+         console.error("❌ ERRO NO ENTER:", err);
+      });
+
+    window.addEventListener("beforeunload", () => {
+        console.log("🟨 ENVIANDO EXIT…");
+        navigator.sendBeacon("https://italomelo.com/contador.php?action=exit&id=" + testId);
+    });
+})();
+</script>
+
+</body>
+</html>
+
+
+
+
+  
 </body>
 </html>
