--- a/index.html
+++ b/index.html
@@ -658,39 +658,24 @@
 
 
 
+
+  
 <script>
 (function(){
+    const uid = "usr_" + Math.random().toString(36).substr(2);
 
-    if (!window.dp_userId) {
-        window.dp_userId = "usr_" + Math.random().toString(36).substring(2);
+    // entrar
+    fetch("https://italomelo.com/tracker_api.php?a=enter&u=" + uid);
 
-        // ENTRADA
-        fetch("https://italomelo.com/contador.php?action=enter&id=" + window.dp_userId)
-            .catch(()=>{});
-    }
+    // ping
+    setInterval(() => {
+        fetch("https://italomelo.com/tracker_api.php?a=ping&u=" + uid);
+    }, 15000);
 
-    // SAÍDA IMEDIATA ao mudar visibilidade
-    document.addEventListener("visibilitychange", function () {
-        if (document.hidden) {
-            navigator.sendBeacon(
-                "https://italomelo.com/contador.php?action=exit&id=" + window.dp_userId
-            );
-        }
+    // sair
+    window.addEventListener("beforeunload", () => {
+        navigator.sendBeacon("https://italomelo.com/tracker_api.php?a=exit&u=" + uid);
     });
-
-    // SAÍDA IMEDIATA ao fechar a aba
-    window.addEventListener("unload", function () {
-        navigator.sendBeacon(
-            "https://italomelo.com/contador.php?action=exit&id=" + window.dp_userId
-        );
-    });
-
-    // HEARTBEAT (mantém a presença ativa)
-    setInterval(function(){
-        fetch("https://italomelo.com/contador.php?action=ping&id=" + window.dp_userId)
-            .catch(()=>{});
-    }, 5000);
-
 })();
 </script>
 
