--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -767,7 +767,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       body_type,
       imc_value,
       imc_label,
-      status: 'pre_checkout', // 👈 define o novo status
+      status: 'pos-quiz', // 👈 define o novo status
       secret: '2a8e5cda3b49e2f6f72dc0d4a1f9f83e9c0fda8b2f7a3e1c4d6b9e7f5a2c1d8e'
     };
 
