--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 
     // 20 perguntas (17 rádio + altura + peso + biotipo)
     var QUESTIONS = [
+      {type:'radio', q:"Para começar, informe sua faixa etária?", a:["15 a 25 anos","26 a 35 anos","36 a 49 anos","tenho + 50 anos"]},
       {type:'radio', q:"Qual seu principal objetivo agora?", a:["Emagrecer rápido","Ganhar massa magra","Manter peso e saúde","Reduzir gordura localizada"]},
       {type:'radio', q:"Seu nível de energia diário é…", a:["Sempre cansado","Oscila muito","Constante","Muito alto"]},
       {type:'radio', q:"Seu apetite ao longo do dia é…", a:["Forte de manhã","Mais fome à noite","Pouco apetite","Muita fome o tempo todo"]},
