--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   {
     label: "Mesomorfo",
     value: "mesomorfo",
-    image: "https://dietapronta.online/img/mesomorfo.png"
+    image: "https://dietapronta.online/img/Mesomorfo.png"
   },
   {
     label: "Ectomorfo",
