--- a/index.html
+++ b/index.html
@@ -199,33 +199,26 @@
       D:{title:"🕒 Jejum Intermitente / Flexível",desc:"Janelas de alimentação bem definidas, sem exageros nas quebras do jejum.",tips:["Defina janela (ex.: 16/8) com orientação","Proteínas e fibras na primeira refeição","Água, café sem açúcar e chás no jejum"],menu:["1ª refeição: bowl proteico (iogurte grego + nuts)","2ª: frango + legumes + arroz integral","3ª (opcional): sopa de legumes + ovos"]}
     };
 
-// var BODY_TYPES = [
-//      { key:'ECTO', name:'Ectomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='26' y='20' width='12' height='18' rx='6' fill='#34d399'/><rect x='24' y='38' width='16' height='20' rx='8' fill='#a7f3d0'/></svg>` },
- //     { key:'MESO', name:'Mesomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='22' y='20' width='20' height='18' rx='8' fill='#34d399'/><rect x='20' y='38' width='24' height='20' rx='10' fill='#a7f3d0'/></svg>` },
-//      { key:'ENDO', name:'Endomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='18' y='20' width='28' height='18' rx='10' fill='#34d399'/><rect x='14' y='38' width='36' height='20' rx='12' fill='#a7f3d0'/></svg>` },
-//      { key:'EQUI', name:'Equilibrado', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='24' y='20' width='16' height='18' rx='7' fill='#34d399'/><rect x='22' y='38' width='20' height='20' rx='9' fill='#a7f3d0'/></svg>` }
-//    ];
-
-    var BODY_TYPES = [
+var BODY_TYPES = [
   {
-    label: "Endomorfo",
-    value: "endomorfo",
-    image: "https://dietapronta.online/img/endomorfo.png"
+    key: 'ECTO',
+    name: 'Ectomorfo',
+    image: 'https://files.chatgpt.com/cdn/ecto.png'
   },
   {
-    label: "Mesomorfo",
-    value: "mesomorfo",
-    image: "https://dietapronta.online/img/Mesomorfo.png"
+    key: 'MESO',
+    name: 'Mesomorfo',
+    image: 'https://files.chatgpt.com/cdn/meso.png'
   },
   {
-    label: "Ectomorfo",
-    value: "ectomorfo",
-    image: "https://dietapronta.online/img/ectomorfo.png"
+    key: 'ENDO',
+    name: 'Endomorfo',
+    image: 'https://files.chatgpt.com/cdn/endo.png'
   },
   {
-    label: "Equilibrado",
-    value: "equilibrado",
-    image: "https://dietapronta.online/img/equilibrado.png"
+    key: 'EQUI',
+    name: 'Equilibrado',
+    image: 'https://files.chatgpt.com/cdn/equilibrado.png'
   }
 ];
 
@@ -389,7 +382,13 @@
           for(var b=0;b<BODY_TYPES.length;b++){
             var bt = BODY_TYPES[b];
             var sel = (bodyTypeKey===bt.key)? ' selected':'';
-            html += '<div class="body-card'+sel+'" data-body="'+bt.key+'">'+bt.svg+'<div class="mt-2 font-semibold">'+bt.name+'</div></div>';
+            html += `
+  		<div class="body-card${sel}" data-body="${bt.key}">
+  		  <img src="${bt.image}" class="mx-auto h-32 w-auto rounded-lg" />
+ 		   <div class="mt-2 font-semibold">${bt.name}</div>
+ 		 </div>
+		`;
+
           }
           html += '</div>';
         }
