--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ var BODY_TYPES = [
   {
     key: 'MESO',
     name: 'Mesomorfo',
-    image: 'https://files.chatgpt.com/cdn/meso.png'
+    image: 'https://dietapronta.online/img/meso.png'
   },
   {
     key: 'ENDO',
@@ -249,6 +249,7 @@ var BODY_TYPES = [
     var QUESTIONS = [
       {type:'radio', q:"Vamos começar.. informe seu gênero", a:["HOMEM","MULHER"]},
       {type:'radio', q:"Qual sua faixa etária?", a:["15 a 25 anos","26 a 35 anos","36 a 49 anos","tenho + 50 anos"]},
+	  {type:'body', q:"Agora escolha seu tipo de corpo (biotipo)", a: BODY_TYPES},
       {type:'radio', q:"Qual seu principal objetivo agora?", a:["Emagrecer rápido","Ganhar massa magra","Manter peso e saúde","Reduzir gordura localizada"]},
       {type:'radio', q:"Seu nível de energia diário é…", a:["Sempre cansado","Oscila muito","Constante","Muito alto"]},
       {type:'radio', q:"Seu apetite ao longo do dia é…", a:["Forte de manhã","Mais fome à noite","Pouco apetite","Muita fome o tempo todo"]},
@@ -265,10 +266,11 @@ var BODY_TYPES = [
       {type:'radio', q:"Consegue ficar longos períodos sem comer?", a:["Sim, tranquilo","Pouco tempo","Depende do dia","Não consigo"]},
       {type:'radio', q:"Nível de organização das refeições", a:["Planejo tudo","Planejo parte","Improviso muito","Quase nunca penso nisso"]},
       {type:'input-height', q:"Qual a sua altura? (em centímetros)", placeholder:"Ex.: 173"},
-      {type:'input-weight', q:"Qual o seu peso atual? (em kg)", placeholder:"Ex.: 78"},
-      {type:'body', q:"Agora escolha seu tipo de corpo (biotipo)", a: BODY_TYPES},
+      {type:'input-weight', q:"Qual o seu peso atual? (em kg)", placeholder:"Ex.: 78"},      
       {type:'radio', q:"Como é sua rotina durante a semana?", a:["Muito corrida","Relativamente organizada","Bastante flexível","Muito sedentária"]},
-      {type:'radio', q:"Qual frase te representa?", a:["Quero resultados rápidos","Prefiro algo sustentável","Quero comer bem e perder peso","Quero performance máxima"]}
+      {type:'radio', q:"Qual frase te representa?", a:["Quero resultados rápidos","Prefiro algo sustentável","Quero comer bem e perder peso","Quero performance máxima"]},
+	  {type:'radio', q:"Você estaria disposto(a) a seguir um plano simples e feito sob medida para o seu corpo?", a:["Sim, com certeza","Acho que sim","Preciso de ajuda para isso"]}
+		
     ];
 
     var selected = new Array(QUESTIONS.length).fill(null);
